# at-home-server

./: .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile
at-home-server/: Cargo.toml
at-home-server/provisioning/roles/commons/tasks/: main.yml
at-home-server/provisioning/roles/rust/tasks/: main.yml
at-home-server/src/: context.rs  main.rs  ping.rs  ride.rs  rides.rs
at-home-server/tests/: test_create_ride.rs
