[package]
name = "at-home-server"
version = "0.1.0"
authors = ["Jean LELIEVRE <Jean.LELIEVRE@supinfo.com>"]

[dependencies]

futures = "*"

serde = "*"
serde_json = "*"
serde_derive = "*"

rocket = "*"
rocket_contrib = { version="*", features=["json"] }

redis = "*"
uuid = { version = "*", features=["serde", "v4"] }

rusoto_core = "*"
rusoto_credential = "*"
rusoto_sns = "*"

[dev-dependencies]

reqwest = "*"
